<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorCardDark"
    android:orientation="vertical"
    tools:mContext=".ui.dialog.SingleActionDialogFragment">

    <TextView
        android:id="@+id/tv_enter_address"
        style="@style/CustomTextAppearance.Text14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_16"
        android:text="@string/label_enter_address_claim" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/hint_enter_address_claim"
        android:textColorHint="@color/colorTextWhiteWithAlpha50"
        app:hintTextAppearance="@style/TextInputLayoutTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tet_address"
            style="@style/CustomTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:theme="@style/TextInputEditTextTheme" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dialog_negative"
            style="@style/CustomTextAppearance.TransparentOrangeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_cancel" />

        <Button
            android:id="@+id/btn_dialog_positive"
            style="@style/CustomTextAppearance.TransparentOrangeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_confirm" />
    </LinearLayout>

</LinearLayout>