<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorCardDark"
    android:orientation="vertical"
    tools:mContext=".ui.dialog.SingleActionDialogFragment">

    <TextView
        android:id="@+id/tv_dialog_title"
        style="@style/CustomTextAppearance.Text14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_16"
        android:text="@string/label_rate_session" />

    <RatingBar
        android:id="@+id/rbRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:numStars="5"
        android:stepSize="1"
        android:theme="@style/RatingBar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_1"
        android:background="@color/colorCardShadow"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dialog_negative"
            style="@style/CustomTextAppearance.TransparentOrangeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_skip" />

        <Button
            android:id="@+id/btn_dialog_positive"
            style="@style/CustomTextAppearance.TransparentOrangeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_rate" />
    </LinearLayout>
</LinearLayout>