<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="4dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="@dimen/margin_4"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="false">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/vpn_card_background"
        >

        <TextView
            android:id="@+id/session_id"
            style="@style/CustomTextAppearance.Text12.GrayNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/session_id"
            android:fontFamily="@font/opensansregular"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_session_id"
            app:layout_constraintEnd_toStartOf="@+id/tv_session_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_session_id"
            style="@style/CustomTextAppearance.Text12.WhiteNormal"
            android:layout_width="0dp"
            android:layout_height="14dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/opensansregular"
            app:layout_constraintBottom_toTopOf="@+id/tv_received_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/session_id"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/received_data"
            style="@style/CustomTextAppearance.Text12.GrayNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/received_data"
            android:fontFamily="@font/opensansregular"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_received_data"
            app:layout_constraintEnd_toStartOf="@+id/tv_received_data"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_received_data"
            style="@style/CustomTextAppearance.Text12.WhiteNormal"
            android:layout_width="0dp"
            android:layout_height="14dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/opensansregular"
            app:layout_constraintBottom_toTopOf="@+id/tv_duration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/received_data"
            app:layout_constraintTop_toBottomOf="@+id/tv_session_id" />

        <TextView
            android:id="@+id/duration"
            style="@style/CustomTextAppearance.Text12.GrayNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/duration"
            android:fontFamily="@font/opensansregular"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_duration"
            app:layout_constraintEnd_toStartOf="@+id/tv_duration"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_duration"
            style="@style/CustomTextAppearance.Text12.WhiteNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/opensansregular"
            app:layout_constraintBottom_toTopOf="@+id/tv_date_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/duration"
            app:layout_constraintTop_toBottomOf="@+id/tv_received_data" />

        <TextView
            android:id="@+id/tv_date_time"
            style="@style/CustomTextAppearance.Text12.WhiteNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/opensansregular"
            android:paddingStart="@dimen/margin_8"
            android:paddingTop="@dimen/margin_8"
            android:paddingEnd="@dimen/margin_8"
            android:paddingBottom="@dimen/margin_8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_duration" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>